--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
     "gapi-script": "^1.2.0",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "mercadopago": "^2.3.0",
@@ -40,10 +41,12 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
