--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "NODE_ENV=development nodemon server.js",
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,18 +14,20 @@
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^146.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.3.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0",
-    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
