--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,14 @@ services:
       - backend
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+          cpus: '2.0'
+        reservations:
+          memory: 1G
+          cpus: '1.0'
 
   backend:
     build: ./backend
@@ -18,17 +26,26 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
+      - ./storage:/var/www/storage
     depends_on:
       mysql:
         condition: service_healthy
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - DB_HOST=mysql
       - DB_USER=root
       - DB_PASSWORD=rootpassword
       - DB_NAME=terapia_db
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          memory: 4G
+          cpus: '2.5'
+        reservations:
+          memory: 2G
+          cpus: '1.5'
 
   mysql:
     image: mariadb:10.11
@@ -40,6 +57,19 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: >
+      --innodb-buffer-pool-size=2G
+      --max-connections=150
+      --innodb-log-file-size=256M
+      --query-cache-size=64M
+      --query-cache-limit=1M
+      --thread-cache-size=16
+      --table-open-cache=2048
+      --sort-buffer-size=2M
+      --read-buffer-size=1M
+      --read-rnd-buffer-size=1M
+      --myisam-sort-buffer-size=64M
+      --thread-concurrency=8
     healthcheck:
       test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
       start_period: 20s
@@ -48,6 +78,14 @@ services:
       retries: 5
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          memory: 3G
+          cpus: '1.5'
+        reservations:
+          memory: 2G
+          cpus: '1.0'
 
   phpmyadmin:
     image: phpmyadmin:latest
@@ -62,6 +100,11 @@ services:
       - PMA_PASSWORD=rootpassword
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
 
 volumes:
   mysql_data:
